overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ span.lightbox{
 
 div.images-gallery{
   display: flex;
+  overflow: hidden;
 }
 
 /*div.images-gallery img{
